# learn-japanese-with-llm

./: .gitignore  AI_FEATURES.md  AI_INTEGRATION_GUIDE.md  README.md  VERB_CONJUGATION_STUDY_GUIDE.md  alembic.ini  app.py  check_database.py  chrome-eval.js  deduplicate_db.py  fix_vocabulary_readings.py  import_bunpro.py  import_top_kanji.py  import_top_words.py  insert_verb_conjugations.py  main.py  pyproject.toml  test_renpy_feature.py
data/: bunpro_jlptplus_usage_ranked_heuristic.csv  top_10000_kanji.csv  top_20000_words.csv
llm_learn_japanese/: __init__.py  db.py  exercises.py  plugin.py  scheduler.py  structured.py
migrations/: env.py
migrations/versions/: 275dc3c343cd_add_new_cards_today_to_usersettings.py  2d179958d92a_add_daily_progress_table.py  a1b2c3d4e5f6_add_repetitions_to_card_aspects.py  b1c2d3e4f5a6_add_bunpro_grammar_table.py  c2d3e4f5a6b7_add_top_kanji_and_words.py  (+1 more)
plans/: advanced_analytics.md  bunpro_grammar.md  multi_question_review.md  top_kanji_and_words.md
templates/: add_content.html  add_grammar.html  add_idiom.html  add_kanji.html  add_phrase.html  add_vocabulary.html  ai_status.html  base.html  bunpro.html  index.html  manual_review.html  mc_study.html  process_discord.html  process_image.html  process_raw_text.html  process_renpy.html  progress.html  save_message.html  settings.html  study.html  study_conjugation.html  verb_conjugations.html
tests/: test_analytics.py  test_app.py  test_bunpro.py  test_deduplication.py  test_exclude_id.py  test_multi_question.py  test_scheduler_limit.py  test_top_kanji_words.py
(+1 files in other folders)
