[project]
name = "japanese-learning-app"
version = "0.2.0"
description = "Terminal and web app for learning Japanese with spaced repetition and AI-based exercises"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "sqlalchemy>=2.0",
    "openai>=1.0",
    "alembic>=1.10",
    "numpy>=2.0",
    "faiss-cpu>=1.10",
]

[project.scripts]
jp-learn = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_learn_japanese"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
exclude = "^(env/|\\.venv/|build/|dist/|.*\\.egg-info/)"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "setuptools.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
